# myblog/docs/swagger.json
@@ -794,7 +794,7 @@
         },
         "/api/category/{id}": {
             "put": {
-                "description": "后台编辑一个动态",
+                "description": "后台编辑一个分类",
                 "consumes": [
                     "application/json"
                 ],
@@ -802,9 +802,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Life"
+                    "Category"
                 ],
-                "summary": "后台更新动态",
+                "summary": "后台编辑分类",
                 "parameters": [
                     {
                         "type": "integer",
